Revision history for Perl extension Tree::Node.

0.10

  [Possible Incompatabile Changes]
  - Calling the key_cmp method with undef dies.

  - Removed exprimental procedural interface.

  [Other Changes]
  - The set_key, force_set_key, set_value, set_child, and
    add_children methods are chainable.

  - Renamed get_child_or_undef to get_child_maybe. Original
    method exists as an alias, but is deprecated.

  - Corrected typos in Changes

  - Reformatted Changes to CPAN::Changes::Spec

  - Removed Build.PL.

  - Misc cleanup of git repository.

  - Moved developer tests to xt directory.

  - Added more tests.

0.09  2011-06-19

  - Bumped up version for upload to GitHub.

0.08  2007-07-20

  - Minor tweaks and typo corrections.

0.07  2007-07-13

  - Distro is no longer signed (due to Module:Signature issues).

  - Fixed error with reading undefined key or value.

  - Added force_set_key mode to change key.

  - Test for leaks in procedural interface.

  - Improved pointer cast.

  - Minor changes to Build.PL

0.06  2005-07-28

  - Added Build.PL.

  - Added additional tests ("kwalitee"-related).

  - Uses Perl malloc macros instead of system malloc.

  - Updated documentation regarding memory usage.

  - Added exports of utility functions.

  - Added experimental procedural interface.

  - Added to_p_node method to get pointer.

0.051  2005-07-22

  - Fixed bad SIGNATURE file.

0.05  2007-07-22

  - Removed _rotate_children method.

  - Renamed SIZE macro to NODESIZE.

  - Fixed bug where node size allocation was too small!

  - Renamed _increment_child_count to add_children.

  - Add_children accepts a list of children to add (so it can add
    multiple children).

  - Added get_children method to return an array of children.

  - Readonly flag is set (this was disabled in v0.04).

  - Documentation updated accordingly.

  - Added developer tests.

0.04  2005-07-15

  - Added _increment_child_count and _rotate_children methods.

  - Updated documentation.
