@@ -7,10 +7,13 @@ Revision history for Perl extension Tree::Node.
 
   - Removed exprimental procedural interface.
 
-  [Other Changes]
+  [Enhancements]
   - The set_key, force_set_key, set_value, set_child, and
     add_children methods are chainable.
 
+  - Added Tree::Node::Clonable to support serialization.
+
+  [Other Changes]
   - Renamed get_child_or_undef to get_child_maybe. Original
     method exists as an alias, but is deprecated.
 
